"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-01-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-74:
	  Makefile.am: split up libhackt.la, factored out AST objects
		into libhacktast.la.
	  Object/*.{h,tcc}: include protection macro #ifndef ...
		for all headers now prefixed with __HAC for consistency, 
		convention, and to minimize collision.


	* HACKT-00-01-04-main-00-73-merged-prsim-00-34:
	  Branch merge.
	  Initial prsim code: expression allocation and command interface.
	  Initial support for PRS macros and attributes. 
	  This branch also includes important library fixes and improvements.  
	  Significant configurability improvement for portability.  


2006-01-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-34:
	  Just portability and compatibility checks.
	  Ready to merge to main.


	* HACKT-00-01-04-main-00-72-prsim-00-33-merged-PRS-03-02:
	  Merged in sibling branch: -PRS-03-02.
		This early merge was deemed necessary because many essential
		fixes and improvements were only on the prsim branch.
		Most importantly the rewrite of cflat visitation
		is needed to support PRS.  
	  TODO: support Clint's requests for PRS extensions.  
	  Status: prsim incomplete:
		expression allocation complete, but not optimized.
		a good start of the command-line interface.
		PRS extensions:
			Initial syntax and object support for macros
				and attributes only.
			need to support primary tool mode, 
			possibly added to cflat_options.  
			Add macro support in the cflat_visitor hierarchy.
	  PRS activity is planned for after the merge to main trunk, 
		then splitting off to -PRS-04.



2006-01-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-32:
	  Finished and (basic) tested member_meta_instance_reference::