@@ -1,12 +1,13 @@
 # "test/parser/basic/Makefile.am"
-#	$Id: Makefile.am,v 1.11 2005/12/13 04:16:48 fang Exp $
+#	$Id: Makefile.am,v 1.12 2006/01/23 18:52:05 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
 HACKT_PARSE_TEST_FAILURES = \
 	004 005 008 009 \
 	010 011 012 013 017 018 \
-	020 021 023
+	020 021 023 \
+	oper-01
 
 HACKT_PARSE_TEST_PASSES = \
 	000 001 002 003 006 007 \
