@@ -1,0 +1,13 @@
+// "oper-01.hac"
+// should die on '&' which is not a valid boolean logical operator.  
+
+template <pint N>
+defproc ass() {
+	bool x, a;
+	[N!=0 & N!=1->
+		prs {
+			x -> a-
+		}
+	]
+}
+
