@@ -1,0 +1,2 @@
+ERROR: "&" is not a valid boolean logical operator, at [7:8]
+Error parsing guard expression at [7:3..13]
