@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2006-01-23	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-74.1:
+	  Useful error message on bad operator in AST's, 
+		logical_expr::check_meta_expr().
+		Bug tripped by Cilnt Kelly.  
+
+
 2006-01-22	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-74:
